--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,15 +79,17 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
-        android:id="@+id/textView"
-        android:textSize="40dp"
-
+        android:id="@+id/logoText"
         android:layout_width="match_parent"
+
+
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
         android:layout_marginTop="100dp"
+        android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="60dp"
+        app:fontFamily="@font/quicksand"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="160dp" />
 
