--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,6 @@
 
     <Button
         android:id="@+id/login"
-        app:backgroundTint="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -57,12 +56,22 @@
         android:layout_marginBottom="64dp"
         android:enabled="false"
         android:text="@string/action_sign_in"
+        android:paddingLeft= "10dp"
+        android:paddingRight = "10dp"
+
+
+
+
+        android:background="@drawable/button_round"
+
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.491" />
+
+    <!--app:backgroundTint="@color/white"!-->
 
     <ProgressBar
         android:id="@+id/loading"
