--- a/app/src/main/res/layout/activity_med_detail.xml
+++ b/app/src/main/res/layout/activity_med_detail.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".data.MyMeds"
-    tools:showIn="@layout/activity_my_meds">
+    tools:context=".MedDetail">
 
-    <ListView
-        android:id="@+id/listView1"
+    <TextView
+        android:id="@+id/my_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:entries="@array/sections"
-        app:layout_constraintTop_toTopOf="parent"></ListView>
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
