--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1E89DD</color>
+    <color name="colorPrimary">#0d47a1</color>
     <color name="colorPrimaryDark">#002171</color>
     <color name="colorAccent">#000000</color>
 <!--D81B60 -->
