--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light_blue_500">#03A9F4</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="light_blue">#eaf0f9</color>
 </resources>
