--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,22 +19,46 @@
         tools:layout_editor_absoluteX="10dp">
 
 
-        <TextView
-            android:id="@+id/alertText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="100dp"
+            android:background="#03A9F4"
+            android:orientation="horizontal"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:background="#03A9F4"
             android:padding="10dp"
-            android:text="@string/alerts"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            app:fontFamily="@font/quicksand"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="60dp" />
+            tools:layout_editor_absoluteY="60dp">
+
+
+            <TextView
+                android:id="@+id/AlertTitle"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+
+                android:text="Alerts Here"
+                android:textSize="18dp"
+                android:inputType="textPersonName"
+               />
+
+            <TextView
+                android:id="@+id/alertText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/alerts"
+                android:textColor="@color/white"
+                android:textSize="16dp"
+                app:fontFamily="@font/quicksand" />
+
+
+
+
+
+        </LinearLayout>
+
 
 
         <TextView
