--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+
             android:layout_height="100dp"
             android:background="#03A9F4"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
@@ -35,11 +36,10 @@
 
             <TextView
                 android:id="@+id/AlertTitle"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-
-                android:text="Alerts Here"
+                android:text="Medical Recall Alerts"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:inputType="textPersonName"
                />
