added food recalls in news

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
 
 
         <TextView
-            android:id="@+id/json"
+            android:id="@+id/news"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:layout_margin="20dp"
