--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
             tools:layout_editor_absoluteY="60dp">
 
             <TextView
-                android:id="@+id/json"
+                android:id="@+id/news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
