--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,13 +119,19 @@
 
         <Button
             android:id="@+id/editButton"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_margin="20dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:background="@drawable/button_round"
+            android:textColor="@color/white"
+            android:background="@drawable/button_edit_med"
             android:onClick="myMedsSwitch"
             android:text="@string/editList"
+            android:paddingRight="15dp"
+
+
+            android:drawableRight="@android:drawable/ic_menu_edit"
             app:layout_constraintTop_toTopOf="parent" />
 
 
