--- a/app/src/main/res/layout/activity_add_meds.xml
+++ b/app/src/main/res/layout/activity_add_meds.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1A2B63"
+    android:background="@drawable/background_med"
     tools:context=".data.AddMeds">
 
     <Button
@@ -22,7 +22,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="300dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="164dp"
         app:layout_constraintEnd_toEndOf="parent"
