--- a/app/src/main/res/layout/activity_med_detail.xml
+++ b/app/src/main/res/layout/activity_med_detail.xml
@@ -10,7 +10,22 @@
         android:id="@+id/my_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="434dp"
+        android:layout_height="639dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_textview"
+        app:layout_constraintVertical_bias="0.448" />
 
 </android.support.constraint.ConstraintLayout>
