--- a/app/src/main/res/layout/activity_add_meds.xml
+++ b/app/src/main/res/layout/activity_add_meds.xml
@@ -9,14 +9,16 @@
 
     <Button
         android:id="@+id/addMedsButton"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="154dp"
-
+        android:layout_marginTop="288dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button_round"
         android:text="@string/submit"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
