--- a/app/src/main/res/layout/activity_info_recall.xml
+++ b/app/src/main/res/layout/activity_info_recall.xml
@@ -31,11 +31,11 @@
             android:id="@+id/recallTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
+            android:textAlignment="center"
             android:layout_marginTop="170dp"
             android:text="NEXT STEPS TO TAKE"
             android:textColor="@color/white"
-            android:textSize="34dp"
+            android:textSize="38dp"
             app:fontFamily="@font/pathway_gothic_one"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
@@ -48,15 +48,26 @@
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewPager"
-                android:layout_width="273dp"
+                android:layout_width="match_parent"
                 android:layout_height="fill_parent"
+                android:textAlignment="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
 
-                android:layout_marginLeft="45dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="45dp"
+                android:layout_marginTop="20dp">
+
+                <android.support.design.widget.TabLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabBackground="@drawable/tab_selector"
+
+                    app:tabGravity="center"
+                    app:tabIndicatorHeight="0dp" />
 
 
-                />
+            </android.support.v4.view.ViewPager>
+
+
 
 
         </LinearLayout>
