--- a/app/src/main/res/layout/activity_info_recall.xml
+++ b/app/src/main/res/layout/activity_info_recall.xml
@@ -27,17 +27,30 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+        <ImageView
+            android:id="@+id/closeButton"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="10dp"
+            android:onClick="backToMain"
+
+            app:srcCompat="@drawable/thin_x" />
+
+
         <TextView
             android:id="@+id/recallTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="110dp"
             android:text="NEXT STEPS TO TAKE"
             android:textColor="@color/white"
             android:textSize="38dp"
             app:fontFamily="@font/pathway_gothic_one"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
 
 
 
@@ -51,8 +64,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
                 android:textAlignment="center"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginRight="35dp"
 
                 android:layout_marginTop="20dp">
 
