--- a/app/src/main/res/layout/activity_my_meds.xml
+++ b/app/src/main/res/layout/activity_my_meds.xml
@@ -20,7 +20,31 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_my_meds" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".data.MyMeds"
+        tools:showIn="@layout/activity_my_meds"
+        android:orientation="vertical"
+        >
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/swipe_refresh_layout"
+            >
+
+            <ListView
+                android:id="@+id/listView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                app:layout_constraintTop_toTopOf="parent"></ListView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
