--- a/app/src/main/res/layout/activity_my_meds.xml
+++ b/app/src/main/res/layout/activity_my_meds.xml
@@ -53,6 +53,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="#3F51B5"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/thin_add" />
 
 </android.support.design.widget.CoordinatorLayout>
