--- a/app/src/main/res/layout/activity_add_meds.xml
+++ b/app/src/main/res/layout/activity_add_meds.xml
@@ -38,7 +38,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+
+        />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
