Recall Message Edit

--- a/app/src/main/res/drawable/button_edit_med.xml
+++ b/app/src/main/res/drawable/button_edit_med.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <color android:color="#ffa6c575" />
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorButtonPrimary"/>
 
             <corners android:radius="5dp" />
         </shape>
