refreshing on home page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,29 @@
     android:layout_height="match_parent"
     android:background="#F3F3FC"
     tools:context=".data.MainActivity">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".data.MyMeds"
+        tools:showIn="@layout/activity_my_meds"
+        android:orientation="vertical"
+        >
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_refresh_layout"
+        >
 
 
     <LinearLayout
         android:id="@+id/topDiv"
         android:layout_width="match_parent"
-        android:layout_height="488dp"
+        android:layout_height="388dp"
         android:background="#E9ECEC"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
@@ -71,7 +88,7 @@
         <LinearLayout
             android:id="@+id/newsDiv"
             android:layout_width="match_parent"
-            android:layout_height="286dp"
+            android:layout_height="186dp"
             android:layout_margin="20dp"
             android:background="@color/white"
             android:orientation="vertical"
@@ -107,36 +124,41 @@
 
         </LinearLayout>
 
+        <LinearLayout
+
+            android:id="@+id/bottomDiv"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#D6E0E0"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/topDiv">
+
+            <Button
+                android:id="@+id/editButton"
+                android:layout_width="230dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_edit_med"
+                android:drawableRight="@android:drawable/ic_menu_edit"
+                android:onClick="myMedsSwitch"
+                android:paddingRight="15dp"
+                android:text="@string/editList"
+
+
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
 
-    <LinearLayout
 
-        android:id="@+id/bottomDiv"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#D6E0E0"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/topDiv">
-
-        <Button
-            android:id="@+id/editButton"
-            android:layout_width="230dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_margin="20dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_edit_med"
-            android:drawableRight="@android:drawable/ic_menu_edit"
-            android:onClick="myMedsSwitch"
-            android:paddingRight="15dp"
-            android:text="@string/editList"
-
-
-            android:textColor="@color/white"
-            app:layout_constraintTop_toTopOf="parent" />
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     </LinearLayout>
 
