--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
                 <LinearLayout
                     android:id="@+id/innerDiv"
                     android:layout_width="match_parent"
+
                     android:layout_height="145dp"
                     android:background="@drawable/gradient"
                     android:orientation="vertical"
@@ -67,6 +68,7 @@
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:padding="10dp"
+
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layout_editor_absoluteX="20dp"
                     tools:layout_editor_absoluteY="60dp">
@@ -78,6 +80,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/foodRecallTitle"
                         android:textAlignment="center"
+                        android:elevation="8dp"
                         android:textSize="20dp"
                         app:fontFamily="@font/quicksand" />
 
